Bug 154725 - Printing not working, only blank pages of output
Summary: Printing not working, only blank pages of output
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml printing (other bugs)
Version First Reported In: 4.0
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 152667 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-28 01:31 UTC by Adam Tulinius
Modified: 2008-01-04 00:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Tulinius 2007-12-28 01:31:55 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.x 
OS:                Linux

(rev 753630)

Printing in konqueror isn't always working, here are a few cases were it works, and where it doesn't.

Not working (only blank pages produced):
http://ing.dk/artikel/84339
http://adamtulinius.dk/ (pages can hardly be simpler than this :-)

Working:
http://www.dr.dk/Nyheder/Indland/2007/12/27/220630.htm

Further more "print selection" is disabled in the printing dialog.

A fresh bug-report were filed on the request of SadEagle
Comment 1 Maksim Orlovich 2007-12-28 01:39:39 UTC
Confirm. Printing kde.org doesn't work either. Would be nice to fix before 4.0, if at all possible..
Comment 2 Tommi Tervo 2007-12-29 11:48:56 UTC
*** Bug 152667 has been marked as a duplicate of this bug. ***
Comment 3 Germain Garand 2008-01-04 00:18:13 UTC
SVN commit 756977 by ggarand:

fix printing.

grave
BUG: 154725


 M  +3 -13     khtmlview.cpp  
 M  +1 -1      rendering/render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=756977