fix printing.

grave
BUG: 154725

svn path=/trunk/KDE/kdelibs/; revision=756977